Divided Transformation and algorithm in two classes

--- a/PigUDF/UDF/pom.xml
+++ b/PigUDF/UDF/pom.xml
@@ -21,6 +21,7 @@
 			<groupId>org.apache.pig</groupId>
 			<artifactId>pig</artifactId>
 			<version>${pig.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
