--- a/MapReduce/pom.xml
+++ b/MapReduce/pom.xml
@@ -21,6 +21,17 @@
 			<version>${hadoop.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jgrapht</groupId>
+			<artifactId>jgrapht-core</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.5</version>
+		</dependency>
+
 
 
 	</dependencies>
