--- a/MapReduce/pom.xml
+++ b/MapReduce/pom.xml
@@ -33,14 +33,12 @@
 			<artifactId>jgrapht-core</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.5</version>
+			<groupId>GraphUtils</groupId>
+			<artifactId>GraphUtils</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-
-
-
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
