--- a/Utilities/GraphVisualization/pom.xml
+++ b/Utilities/GraphVisualization/pom.xml
@@ -15,6 +15,12 @@
 			<version>0.9.1</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jgrapht</groupId>
+			<artifactId>jgrapht-ext</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>GraphUtils</groupId>
 			<artifactId>GraphUtils</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
