--- a/Graph/TwitterDataGraph/pom.xml
+++ b/Graph/TwitterDataGraph/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>TwitterGraphModel</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>HadoopUtils</groupId>
+			<artifactId>HadoopUtils</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
