--- a/Utilities/GraphUtils/pom.xml
+++ b/Utilities/GraphUtils/pom.xml
@@ -14,6 +14,11 @@
 			<version>0.9.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>TwitterGraphModel</groupId>
+			<artifactId>TwitterGraphModel</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
